src/test/deca/syntax/valid/hello.deca
// Description:
//          println d'un string
//
// Résultat:
//Succès
//
{
        println("Hello");
}
