src/test/deca/syntax/invalid/while_nonconditionnel.deca
//  Description :
//            Structure while avec un while sans condition
//
// Résultat:
//mismatched input '{' expecting '('
//
{
    while {}
}